# book_store

./: .gitignore  README.md  auth.py  blog.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
routers/: articles_router.py  auth_router.py  books.py  comments_router.py  profiles_router.py
static/css/: style.css
templates/: article.html  articles.html  base.html  book_adding.html  books.html  edit.html  edit_profile.html  index.html  login.html  profile.html  read_book.html  register.html  write.html
