[tool.poetry]
name = "book-store-project-x"
version = "1.0.0"
description = "This project gives you the opportunity to download, read, track statistics and create tests for your books for all users (as you wish)"
authors = ["Yaropolk", "Renat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
sqlalchemy = "2.0.23"
jinja2 = "3.1.2"
markdown = "^3.8"
uvicorn = "0.24.0"
werkzeug = "3.1.3"
pymupdf = "1.26.0"
python-dotenv = "1.0.0"
python-slugify = "8.0.1"
pydantic = "2.11.5"
aiofiles = "23.2.1"
annotated-types = "0.7.0"
anyio = "3.7.1"
bcrypt = "4.3.0"
cffi = "1.17.1"
click = "8.2.1"
colorama = "0.4.6"
cryptography = "45.0.3"
ecdsa = "0.19.1"
greenlet = "3.2.2"
h11 = "0.16.0"
idna = "3.10"
markdown2 = "2.4.10"
markupsafe = "3.0.2"
passlib = "1.7.4"
pillow = "10.1.0"
pyasn1 = "0.6.1"
pycparser = "2.22"
pygments = "2.17.2"
python-jose = "3.3.0"
python-multipart = "0.0.6"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.27.0"
text-unidecode = "1.3"
typing-inspection = "0.4.1"
typing-extensions = "4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
